[package]
name = "palworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-info = "0.9.1"
rcon = {version= "0", features = ["rt-async-std"]}
async-std = { version = "1.12.0"}
err-derive = "0.3.0"
tokio = { version = "1.10.1", features = ["full"] }
tokio-cron-scheduler = "*"